# image-upload

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs  model.rs  service.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: ImageUpload.tsx
