[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
dotenv = "0.15.0"
google-cloud-storage = "0.15.0"
serde = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
