[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
axum = { version = "0.7.2", features = ["multipart"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
